# MPI-LCI-practice

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cTest  cmake_install.cmake  hello-world  lci_pingpong  lci_random.cpp  lci_random_backup.c  mpi_hello_world.c  mpi_pingpong  mpi_random_pingpong.c  mpi_random_pingpong1.cpp  mpi_random_send.c  testIsend.c
